--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-session": "^1.16.1",
     "massive": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
